--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "three": "^0.182.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -42,6 +42,7 @@
     "postcss": "^8.5.6",
     "shadcn": "^3.8.4",
     "tailwindcss": "^3.4.19",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
