--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
-    "@types/react-scroll": "^1.8.10",
+    "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.34.0",
     "gray-matter": "^4.0.3",
-    "gsap": "^3.14.2",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-mdx-remote": "^6.0.0",
@@ -27,9 +23,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-scroll": "^1.9.3",
-    "tailwind-merge": "^3.4.0",
-    "three": "^0.182.0"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
