--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
-    "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-mdx-remote": "^6.0.0",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
@@ -34,10 +33,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "postcss": "^8.5.6",
-    "shadcn": "^3.8.4",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
